sample select2 html, select2() on render, prevent squish with width 335px

--- a/client/css/main.styl
+++ b/client/css/main.styl
@@ -623,6 +623,10 @@ body
 			height: 34px
 			width: 100px
 
+		.select2-container
+			// prevents select2 from being squished
+			width: 335px
+
 	#classroomSession
 		position: relative
 		overflow: hidden
